gonna use tippy js instead of popper as it seems to be much better

--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-clipboard.js": "^2.0.16",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "tippy.js": "^6.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
